cod-tools (unreleased)

  * Added:
    - COD::AtomNeighbours:
      - the neighbour_list_to_cif_datablock() subroutine.
    - cif_validate:
      - the '--range-su-multiplier' option.
  * Changed:
    - COD::CIF::Data::AtomList:
      - updated the datablock_from_atom_array() subroutine to ignore
        missing atom information.
    - COD::CIF::DDL::Ranges:
      - updated the is_in_range() subroutine to accept an optional
        multiplier that should be applied to the standard uncertainty (s.u.)
        when determining if a numeric value resides in the specified range.  

cod-tools (2.12)

  * Added:
    - COD::AtomNeighbours:
      - the neighbour_list_to_graph() subroutine.
    - COD::CIF::Data::CODNumbers:
      - allowing passing an option to include attached hydrogens in formula
        calculation (off by default).
    - cif_cod_numbers:
      - the '--use-attached-hydrogens' option.
  * Fixed:
    - codcif:
      - properly reporting CIF save_ frames outside data blocks.
    - cif_overlay:
      - fixing description of atom_rms() subroutine.

cod-tools (2.11)

  * Added:
    - COD::Algebra::GaussJordan:
      - the gj_elimination() subroutine;
      - the gj_elimination_non_zero_elements() subroutine;
      - the back_substitution() subroutine which fully replaces
        the deprecated backward_elimination() subroutine;
    - the COD::Algebra::GaussJordanBigRat module which serves as a drop-in
      replacement for the COD::Algebra::GaussJordan module, but uses BigRat
      rational number arithmetic instead of the floating point arithmetic;
    - COD::CIF::DDL:
      - the get_category_name_from_local_data_name() subroutine.
    - COD::CIF::DDL::DDL1:
      - the classify_dic_blocks() subroutine;
      - the get_data_name() subroutine;
      - the get_data_names() subroutine;
      - the convert_pseudo_data_name_to_category_name() subroutine.
    - cif_validate:
      - the '--merge-ddl1-dictionaries' and '--no-merge-ddl1-dictionaries'