@@ -1,0 +1,3 @@
+Data block 'empty' does not have partially occupied ordered atoms.
+Data block 'with_partials' has partially occupied ordered atoms.
+Data block 'without_occupancies' does not have partially occupied ordered atoms.
