@@ -3,6 +3,8 @@ cod-tools (unreleased)
   * Added:
     - COD::AtomNeighbours:
       - the neighbour_list_to_cif_datablock() subroutine.
+    - COD::CIF::Data::CODFlags:
+      - the has_partially_occupied_ordered_atoms() subroutine.
     - cif_validate:
       - the '--range-su-multiplier' option.
   * Changed:
